Working parse and unparse

--- a/zadanie1/Makefile
+++ b/zadanie1/Makefile
@@ -1,5 +1,5 @@
-main: main.c library.o
-	gcc -g -m32 -o main main.c library.o
+main: main.c parse.o
+	gcc -g -m32 -o main main.c parse.o unparse.o
 
 .SECONDARY:
 
