--- a/zadanie1/Makefile
+++ b/zadanie1/Makefile
@@ -1,5 +1,5 @@
-main: main.c parse.o unparse.o suma.o roznica.o iloczyn.o iloraz.o
-	gcc -g -m32 -o main main.c parse.o unparse.o suma.o roznica.o iloczyn.o iloraz.o
+main: main.c parse.o unparse.o suma.o roznica.o iloczyn.o iloraz.o shift_left_bcd.o
+	gcc -g -m32 -lm -o main main.c parse.o unparse.o suma.o roznica.o iloczyn.o iloraz.o shift_left_bcd.o -lm
 
 .SECONDARY:
 
@@ -7,7 +7,7 @@ main: main.c parse.o unparse.o suma.o roznica.o iloczyn.o iloraz.o
 	nasm -g -f elf32 $<
 
 %: %.o
-	ld -m elf_i386 $< -o $@ -lc --dynamic-linker=/lib/ld-linux.so.2
+	ld -m elf_i386 $< -o $@ -lc  --dynamic-linker=/lib/ld-linux.so.2
 
 clean:
 	rm main -f *.o *~
