--- a/zadanie2/Makefile
+++ b/zadanie2/Makefile
@@ -1,5 +1,5 @@
 main: main.c library.o
-	gcc -g -o main main.c library.o
+	gcc -m64 -g -o main main.c library.o
 
 .SECONDARY:
 
@@ -7,7 +7,7 @@ main: main.c library.o
 	nasm -f elf64 -F dwarf -g $<
 	
 %: %.o
-	ld -$< -o $@ -lc --dynamic-linker=/lib64/ld-linux-x86-64.so.2
+	ld -b64 -$< -o $@ -lc --dynamic-linker=/lib64/ld-linux-x86-64.so.2
 	
 clean:
 	rm -f *.o
